# serializer version: 1
# name: test_input_entities[analog]
  dict({
    'binary_sensor.workshop_digital_input_1': dict({
      'attributes': dict({
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Workshop Digital input 1',
      }),
      'state': 'on',
    }),
    'binary_sensor.workshop_digital_input_2': dict({
      'attributes': dict({
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Workshop Digital input 2',
      }),
      'state': 'off',
    }),
    'sensor.workshop_current_1': dict({
      'attributes': dict({
        <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'current',
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Workshop Current 1',
        <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
        <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfElectricCurrent.MILLIAMPERE: 'mA'>,
      }),
      'state': '4.88',
    }),
    'sensor.workshop_current_2': dict({
      'attributes': dict({
        <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'current',
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Workshop Current 2',
        <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
        <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfElectricCurrent.MILLIAMPERE: 'mA'>,
      }),
      'state': '4.864',
    }),
    'sensor.workshop_digital_count_1': dict({
      'attributes': dict({
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Workshop Digital count 1',
        <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
      }),
      'state': 'unknown',
    }),
    'sensor.workshop_digital_count_2': dict({
      'attributes': dict({
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Workshop Digital count 2',
        <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
      }),
      'state': 'unknown',
    }),
    'sensor.workshop_voltage_1': dict({
      'attributes': dict({
        <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'voltage',
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Workshop Voltage 1',
        <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
        <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfElectricPotential.VOLT: 'V'>,
      }),
      'state': '1.195',
    }),
    'sensor.workshop_voltage_2': dict({
      'attributes': dict({
        <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'voltage',
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Workshop Voltage 2',
        <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
        <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfElectricPotential.VOLT: 'V'>,
      }),
      'state': '1.196',
    }),
    'sensor.workshop_voltage_count_1': dict({
      'attributes': dict({
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Workshop Voltage count 1',
        <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
      }),
      'state': 'unknown',
    }),
    'switch.workshop_digital_output_1': dict({
      'attributes': dict({
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Workshop Digital output 1',
      }),
      'state': 'on',
    }),
    'switch.workshop_digital_output_2': dict({
      'attributes': dict({
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Workshop Digital output 2',
      }),
      'state': 'off',
    }),
    'switch.workshop_relay_1': dict({
      'attributes': dict({
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Workshop Relay 1',
      }),
      'state': 'on',
    }),
    'switch.workshop_relay_2': dict({
      'attributes': dict({
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Workshop Relay 2',
      }),
      'state': 'off',
    }),
  })
# ---
# name: test_input_entities[count_and_current]
  dict({
    'binary_sensor.workshop_digital_input_1': dict({
      'attributes': dict({
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Workshop Digital input 1',
      }),
      'state': 'unknown',
    }),
    'binary_sensor.workshop_digital_input_2': dict({
      'attributes': dict({
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Workshop Digital input 2',
      }),
      'state': 'unknown',
    }),
    'sensor.workshop_current_1': dict({
      'attributes': dict({
        <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'current',
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Workshop Current 1',
        <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
        <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfElectricCurrent.MILLIAMPERE: 'mA'>,
      }),
      'state': '4.88',
    }),
    'sensor.workshop_current_2': dict({
      'attributes': dict({
        <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'current',
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Workshop Current 2',
        <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
        <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfElectricCurrent.MILLIAMPERE: 'mA'>,
      }),
      'state': '4.864',
    }),
    'sensor.workshop_digital_count_1': dict({
      'attributes': dict({
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Workshop Digital count 1',
        <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
      }),
      'state': '2147483649',
    }),
    'sensor.workshop_digital_count_2': dict({
      'attributes': dict({
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Workshop Digital count 2',
        <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
      }),
      'state': 'unknown',
    }),
    'sensor.workshop_voltage_1': dict({
      'attributes': dict({
        <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'voltage',
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Workshop Voltage 1',
        <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
        <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfElectricPotential.VOLT: 'V'>,
      }),
      'state': 'unknown',
    }),
    'sensor.workshop_voltage_2': dict({
      'attributes': dict({
        <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'voltage',
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Workshop Voltage 2',
        <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
        <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfElectricPotential.VOLT: 'V'>,
      }),
      'state': 'unknown',
    }),
    'sensor.workshop_voltage_count_1': dict({
      'attributes': dict({
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Workshop Voltage count 1',
        <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
      }),
      'state': 'unknown',
    }),
    'switch.workshop_digital_output_1': dict({
      'attributes': dict({
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Workshop Digital output 1',
      }),
      'state': 'off',
    }),
    'switch.workshop_digital_output_2': dict({
      'attributes': dict({
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Workshop Digital output 2',
      }),
      'state': 'on',
    }),
    'switch.workshop_relay_1': dict({
      'attributes': dict({
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Workshop Relay 1',
      }),
      'state': 'off',
    }),
    'switch.workshop_relay_2': dict({
      'attributes': dict({
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Workshop Relay 2',
      }),
      'state': 'off',
    }),
  })
# ---
# name: test_input_entities[digital_counts]
  dict({
    'binary_sensor.workshop_digital_input_1': dict({
      'attributes': dict({
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Workshop Digital input 1',
      }),
      'state': 'unknown',
    }),
    'binary_sensor.workshop_digital_input_2': dict({
      'attributes': dict({
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Workshop Digital input 2',
      }),
      'state': 'unknown',
    }),
    'sensor.workshop_current_1': dict({
      'attributes': dict({
        <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'current',
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Workshop Current 1',
        <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
        <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfElectricCurrent.MILLIAMPERE: 'mA'>,
      }),
      'state': 'unknown',
    }),
    'sensor.workshop_current_2': dict({
      'attributes': dict({
        <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'current',
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Workshop Current 2',
        <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
        <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfElectricCurrent.MILLIAMPERE: 'mA'>,
      }),
      'state': 'unknown',
    }),
    'sensor.workshop_digital_count_1': dict({
      'attributes': dict({
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Workshop Digital count 1',
        <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
      }),
      'state': '4294967295',
    }),
    'sensor.workshop_digital_count_2': dict({
      'attributes': dict({
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Workshop Digital count 2',
        <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
      }),
      'state': '2147483649',
    }),
    'sensor.workshop_voltage_1': dict({
      'attributes': dict({
        <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'voltage',
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Workshop Voltage 1',
        <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
        <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfElectricPotential.VOLT: 'V'>,
      }),
      'state': 'unknown',
    }),
    'sensor.workshop_voltage_2': dict({
      'attributes': dict({
        <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'voltage',
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Workshop Voltage 2',
        <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
        <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfElectricPotential.VOLT: 'V'>,
      }),
      'state': 'unknown',
    }),
    'sensor.workshop_voltage_count_1': dict({
      'attributes': dict({
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Workshop Voltage count 1',
        <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
      }),
      'state': 'unknown',
    }),
    'switch.workshop_digital_output_1': dict({
      'attributes': dict({
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Workshop Digital output 1',
      }),
      'state': 'on',
    }),
    'switch.workshop_digital_output_2': dict({
      'attributes': dict({
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Workshop Digital output 2',
      }),
      'state': 'on',
    }),
    'switch.workshop_relay_1': dict({
      'attributes': dict({
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Workshop Relay 1',
      }),
      'state': 'on',
    }),
    'switch.workshop_relay_2': dict({
      'attributes': dict({
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Workshop Relay 2',
      }),
      'state': 'on',
    }),
  })
# ---
# name: test_input_entities[mixed]
  dict({
    'binary_sensor.workshop_digital_input_1': dict({
      'attributes': dict({
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Workshop Digital input 1',
      }),
      'state': 'unknown',
    }),
    'binary_sensor.workshop_digital_input_2': dict({
      'attributes': dict({
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Workshop Digital input 2',
      }),
      'state': 'unknown',
    }),
    'sensor.workshop_current_1': dict({
      'attributes': dict({
        <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'current',
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Workshop Current 1',
        <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
        <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfElectricCurrent.MILLIAMPERE: 'mA'>,
      }),
      'state': '4.88',
    }),
    'sensor.workshop_current_2': dict({
      'attributes': dict({
        <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'current',
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Workshop Current 2',
        <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
        <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfElectricCurrent.MILLIAMPERE: 'mA'>,
      }),
      'state': 'unknown',
    }),
    'sensor.workshop_digital_count_1': dict({
      'attributes': dict({
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Workshop Digital count 1',
        <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
      }),
      'state': '65535',
    }),
    'sensor.workshop_digital_count_2': dict({
      'attributes': dict({
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Workshop Digital count 2',
        <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
      }),
      'state': 'unknown',
    }),
    'sensor.workshop_voltage_1': dict({
      'attributes': dict({
        <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'voltage',
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Workshop Voltage 1',
        <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
        <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfElectricPotential.VOLT: 'V'>,
      }),
      'state': '1.195',
    }),
    'sensor.workshop_voltage_2': dict({
      'attributes': dict({
        <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'voltage',
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Workshop Voltage 2',
        <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
        <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfElectricPotential.VOLT: 'V'>,
      }),
      'state': '1.196',
    }),
    'sensor.workshop_voltage_count_1': dict({
      'attributes': dict({
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Workshop Voltage count 1',
        <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
      }),
      'state': 'unknown',
    }),
    'switch.workshop_digital_output_1': dict({
      'attributes': dict({
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Workshop Digital output 1',
      }),
      'state': 'off',
    }),
    'switch.workshop_digital_output_2': dict({
      'attributes': dict({
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Workshop Digital output 2',
      }),
      'state': 'off',
    }),
    'switch.workshop_relay_1': dict({
      'attributes': dict({
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Workshop Relay 1',
      }),
      'state': 'on',
    }),
    'switch.workshop_relay_2': dict({
      'attributes': dict({
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Workshop Relay 2',
      }),
      'state': 'off',
    }),
  })
# ---
# name: test_input_entities[voltage_count]
  dict({
    'binary_sensor.workshop_digital_input_1': dict({
      'attributes': dict({
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Workshop Digital input 1',
      }),
      'state': 'unknown',
    }),
    'binary_sensor.workshop_digital_input_2': dict({
      'attributes': dict({
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Workshop Digital input 2',
      }),
      'state': 'unknown',
    }),
    'sensor.workshop_current_1': dict({
      'attributes': dict({
        <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'current',
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Workshop Current 1',
        <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
        <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfElectricCurrent.MILLIAMPERE: 'mA'>,
      }),
      'state': 'unknown',
    }),
    'sensor.workshop_current_2': dict({
      'attributes': dict({
        <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'current',
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Workshop Current 2',
        <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
        <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfElectricCurrent.MILLIAMPERE: 'mA'>,
      }),
      'state': 'unknown',
    }),
    'sensor.workshop_digital_count_1': dict({
      'attributes': dict({
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Workshop Digital count 1',
        <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
      }),
      'state': '2147483649',
    }),
    'sensor.workshop_digital_count_2': dict({
      'attributes': dict({
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Workshop Digital count 2',
        <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
      }),
      'state': 'unknown',
    }),
    'sensor.workshop_voltage_1': dict({
      'attributes': dict({
        <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'voltage',
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Workshop Voltage 1',
        <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
        <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfElectricPotential.VOLT: 'V'>,
      }),
      'state': 'unknown',
    }),
    'sensor.workshop_voltage_2': dict({
      'attributes': dict({
        <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'voltage',
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Workshop Voltage 2',
        <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
        <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfElectricPotential.VOLT: 'V'>,
      }),
      'state': 'unknown',
    }),
    'sensor.workshop_voltage_count_1': dict({
      'attributes': dict({
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Workshop Voltage count 1',
        <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
      }),
      'state': '4294967295',
    }),
    'switch.workshop_digital_output_1': dict({
      'attributes': dict({
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Workshop Digital output 1',
      }),
      'state': 'off',
    }),
    'switch.workshop_digital_output_2': dict({
      'attributes': dict({
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Workshop Digital output 2',
      }),
      'state': 'off',
    }),
    'switch.workshop_relay_1': dict({
      'attributes': dict({
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Workshop Relay 1',
      }),
      'state': 'off',
    }),
    'switch.workshop_relay_2': dict({
      'attributes': dict({
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Workshop Relay 2',
      }),
      'state': 'on',
    }),
  })
# ---
